# MiraiSD

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  env.template  package-lock.json  requirements.txt
bff-service/: Dockerfile  README.md  (+3 more)
forecasting-service/: .gitignore  pyproject.toml
forecasting-service/forecastingPipeline/: README.md
forecasting-service/forecastingPipeline/src/: config.py  features.py  forecast.py  forecast_job.py  policy.py
forecasting-service/forecastingPipeline/tests/: test_forecast.py
forecasting-service/src/: policy.py
forecasting-service/tests/: __init__.py  test_policy.py
services/forecasting-service/: .editorconfig  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
services/forecasting-service/experiments/: FORECASTING_REPORT.md  compare_approaches.py  compare_fair.py  compare_forecasts.py  extract_snapshot.py  generate_algorithm_explainer.py  generate_backtest_report.py  generate_system_report.py  run_backtest.py  validate_production_changes.py  visualize_results.py
services/forecasting-service/src/: __init__.py  backtest.py  config.py  events.py  features.py  forecast.py  forecast_job.py  lead_time.py  policy.py  repo.py  segmentation.py  worker.py
services/forecasting-service/src/adapters/: __init__.py  dlq_producer.py  kafka_consumer.py  supabase_repo.py
services/forecasting-service/src/api/: __init__.py  main.py
services/forecasting-service/src/application/: __init__.py  backtester.py  event_aggregator.py  pipeline.py
services/forecasting-service/src/estimators/: tsb.py
services/forecasting-service/tests/: test_api_error_handling.py  test_backtest.py  test_censored_demand.py  test_config.py  test_dlq_producer.py  test_dow_application.py  test_dow_weighting.py  test_e2e_optimizations.py  test_event_features.py  test_events.py  test_events_inventory_fields.py  test_features.py  test_forecast.py  test_job.py  test_kafka_consumer_dlq.py  test_lead_time.py  test_policy.py  test_policy_vectorized.py  test_repo.py  test_residual_bias.py  test_safety_stock_regimes.py  test_segmentation.py  test_ship_gate.py  test_shrinkage.py  test_suggest_order_v2.py  test_tsb.py
services/forecasting-service/tests/adapters/: __init__.py  test_supabase_repo_get_items.py  test_supabase_repo_optimized.py  test_supabase_repo_rop.py
services/forecasting-service/tests/application/: test_backtester.py  test_event_aggregator.py  test_pipeline_coverage.py  test_pipeline_event_inventory.py  test_pipeline_integration.py  test_pipeline_rop_propagation.py  test_pipeline_segments.py  test_pipeline_vectorized.py
services/forecasting-service/tests/integration/: conftest.py  test_kafka_to_pipeline.py
services/messaging-service/: .env.example  Dockerfile  README.md  backfill_reviews.py  pyproject.toml  requirements.txt  reviews_2026-02-01_2026-02-28_20260313_122515.json  test_full_flow.py  test_full_pipeline.py  test_notifications.py  test_slack.py
services/messaging-service/src/: __init__.py  config.py  events.py  scheduler.py  worker.py
services/messaging-service/src/adapters/: apify_client.py  kafka_consumer.py  kafka_producer.py  slack_notifier.py  supabase_repo.py
services/messaging-service/src/api/: __init__.py  main.py
services/messaging-service/tests/: test_api_error_handling.py  test_coin_rate.py  test_events.py  test_kafka_consumer_dlq.py  test_slack_notifier.py
(+1434 files in other folders)
