[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "malp-forecast"
version = "0.1.0"
description = "Forecasting pipeline for inventory management"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2.2",
    "numpy<2.0.0",
    "python-dateutil>=2.8.2",
    "pytz>=2024.1",
    "prophet==1.1.5",
    "cmdstanpy>=1.2.0",
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "orjson==3.10.7",
    "kafka-python==2.0.2",
    "watchdog==4.0.1",
    "SQLAlchemy==2.0.35",
    "scikit-learn==1.5.2",
    "matplotlib==3.9.2",
    "pydantic==2.9.2",
    "python-dotenv==1.0.1",
    "rich==13.9.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "black>=24.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
